Without lambdas and loading content to nodes properly